--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <link rel="dns-prefetch" href="//2.gravatar.com">
 <link rel="dns-prefetch" href="//i0.wp.com">
 <link rel="dns-prefetch" href="//c0.wp.com">
-<link rel="alternate" type="application/rss+xml" title="Rocco on Base » Feed" href="https://basedrocco.com/feed/">
-<link rel="alternate" type="application/rss+xml" title="Rocco on Base » Comments Feed" href="https://basedrocco.com/comments/feed/">
+<link rel="alternate" type="application/rss+xml" title="Oister on Base » Feed" href="https://oister.tech">
+<link rel="alternate" type="application/rss+xml" title="Oister on Base » Comments Feed" href="https://oister.tech/">
 <script>
 window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15.0.3\/72x72\/","ext":".png","svgUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15.0.3\/svg\/","svgExt":".svg","source":{"concatemoji":"https:\/\/basedrocco.com\/wp-includes\/js\/wp-emoji-release.min.js?ver=6.5.3"}};
 /*! This file is auto-generated */
@@ -1053,15 +1053,15 @@ left: 3px;
 
 
 </style>
-                            <meta name="description" content="Rocco on Base. It's just a rock. The top meme coin on Base blockchain.">
+                            <meta name="description" content="Oister on Base. It's Not just a rock. The top meme coin on Base blockchain.">
 
 <!-- Jetpack Open Graph Tags -->
 <meta property="og:type" content="website">
-<meta property="og:title" content="Rocco on Base">
-<meta property="og:description" content="Rocco on Base. It's just a rock. The top meme coin on Base blockchain.">
-<meta property="og:url" content="https://basedrocco.com/">
-<meta property="og:site_name" content="Rocco on Base">
-<meta property="og:image" content="images/Logo_3.png">
+<meta property="og:title" content="Oister on Base">
+<meta property="og:description" content="oister on Base. It's Not just a rock. The top meme coin on Base blockchain.">
+<meta property="og:url" content="https://oister.tech">
+<meta property="og:site_name" content="oister on Base">
+<meta property="og:image" content="images/3D-Token.png">
 <meta property="og:image:width" content="640">
 <meta property="og:image:height" content="640">
 <meta property="og:image:alt" content="">
