--- a/index.html
+++ b/index.html
@@ -1507,7 +1507,7 @@ left: 3px;
 	<section class="section discount">
 		<div class="discount__container container grid">
 			<div class="discount__data">
-				<h2 class="discount__title">Whitepaper?? <br> <br>... It's Not just a Rock! </h2>
+				<h2 class="discount__title">Whitepaper?? <br> <br>... It's Not just a Oister! </h2>
 				<a href="https://app.uniswap.org/swap?inputCurrency=ETH&amp;outputCurrency=" class="book--now">
                     <div class="Buy_button">Buy</div>
 					<!--<img src="" alt="" />-->
