--- a/index.html
+++ b/index.html
@@ -1107,8 +1107,8 @@ left: 3px;
 				<li class="nav__item">
 					<a href="#new" class="nav__link">Oister</a>
 				</li>
-				<a href="https://t.me/oisterbase" class="button button--ghost">Telegram</a>
-				<a href="https://x.com/oisterbase_" class="button button--ghost">X</a>
+				<a href="https://t.me/oister_portal" class="button button--ghost">Telegram</a>
+				<a href="https://x.com/OisterFantom" class="button button--ghost">X</a>
 			</ul>
 			<div class="nav__close" id="nav-close">
 				<i class="bx bx-x"></i>
@@ -1431,7 +1431,7 @@ left: 3px;
 			<div class="about__data">
 				<h2 class="section__title about__title">About Oister <br> </h2>
 				<p class="about__description">$OISTER is a perfect example of how a memecoin based project can evolve into a complex and highly valuable ecosystem. By combining innovation in 3D NFT technology, robust DeFi services, and a versatile cryptocurrency token, $OISTER positions itself at the forefront of the crypto industry. This transformation not only illustrates the evolution from a simple idea into a serious project but also highlights the vast potential offered by the world of blockchain and crypto to those who dare to dream and innovate.</p>
-				<a href="https://app.uniswap.org/swap?0x0DaF159893d46EfCAEC6E9E5bf36EabB55FBD2c9inputCurrency=ETH&amp;outputCurrency=" class="book--now">
+				<a href="#">
 					<div class="Buy_button">Buy</div>
                     <!-- <img src="" alt="" /> -->
 				</a>
@@ -1592,10 +1592,10 @@ left: 3px;
 			
 			<form action="" class="newsletter__form">
 				
-				<a href="https://t.me/oisterbase" class="book--now">
+				<a href="https://t.me/oister_portal" class="book--now">
 					<img src="images/Telegramlogo.png" alt="">
 				</a>
-                <a href="https://x.com/oisterbase_" class="book--now">
+                <a href="https://x.com/OisterFantom" class="book--now">
 					<img src="images/Xlogo.png" alt="">
 				</a>
                 <a href="https://www.dextools.io" class="book--now">
